dev/nodejs-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 3000
    name: http
